I've inserted all the images required and I'm recently on the second screen.

--- a/index.html
+++ b/index.html
@@ -3,19 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>YctCodePlay</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About Us</a></li>
+            <li><a href="" class="active">Home</a></li>
+            <li><a href="">Courses</a></li>
             <li><a href="">Contact Us</a></li>
-            <li><a href="">Socials</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="" class="signup">Sign up +</a></li>
         </ul>
     </nav>
     <header>
+       <div class="header-container">
+            <div class="brand-name">
+                <img src="imgs/YCT CODEPLAY-logo 1.png" alt="logo">
+            </div>
+            <div class="btns">
+                <a href="#" class="login">Login</a>
+                <a href="#" class="signup">Signup +</a>
+                <a href="#">+</a>
+            </div>
+       </div>
+       <div class="contents">
+            <h3>Coding simplified for students</h3>
+            <h2>Learn To <span>Code.</span></h2>
+            <h1>Build Your Future!</h1>
+            <p>
+                Yctcodeplay is the coding platform for students and learners at every level
+            </p>
+            <p>Start coding with hands-on exercises, guided tutorial, and practical project</p>
+            <p>tailored to help you grow, one line of code at a time.</p>
 
+            <div class="btn">
+                <a href="#" class="loginbtn">Login</a>
+                <a href="#" class="Get_started">Get Coding{} <span>-></span></a>
+            </div>
+       </div>
+
+       <div class="boxes">
+            <span style="background: blue;" class="html">Html</span>
+            <span style="background: white; color: #000" class="css">Css</span>
+            <span style="background: grey; color: #000" class="kotlin">Kotlin</span>
+            <span style="background: rgb(26, 193, 26);" class="Ruby">Ruby</span>
+            <span style="background: white; color: #000;" class="php">PHP</span>
+            <span style="background:  rgb(26, 193, 26);;" class="javascript">Javascript</span>
+            <span style="background: blue;" class="nodejs">Node js</span>
+            <span style="background:  rgb(26, 193, 26);;" class="python">Python</span>
+            <span style="background: #fff; color: #000;" class="java">Java</span>
+            <span style="background: yellow; color: #000;" class="Git">Git</span>
+            <span style="background: purple;">Visual Studio</span>
+            <span style="background: yellow; color: #000">Docker</span>
+            <span style="background: white; color: #000">React.JS</span>
+            <span style="background: purple;">Dart</span>
+            <span style="background: grey;">Swift</span>
+            <span style="background: yellow; color: #000">Objective C</span>
+            <span style="background: green; color: white;">C#</span>
+            <span style="background: blue; color: ">C++</span>
+            <span style="background: yellow; color: #000">C</span>
+            <span style="background: blue;">C++</span>
+       </div>
+       <div class="img">
+           <img src="imgs/Man2.png" alt="">
+       </div>
     </header>
+    <section>
+        <h5>WHY YCT CODEPLAY?</h5>
+        <h2>We believe</h2>
+        <h1>in the potential <span>for</span> <br> technology <span>to reshape the</span> <br> learning experience</h1>
+        <div class="circles">
+            <div class="circle">
+                <h3>5000+</h3>
+                <p>students willing to <br> learn coding skills</p>
+            </div>
+            <div class="circle">
+                <h3>15K+</h3>
+                <p>courses already</p>
+                <p>completed on YCT</p>
+                <p>CodePlay</p>
+            </div>
+            <div class="circle" id="img">
+                <img src="imgs/2 (1).png" alt="student">
+            </div>
+            <div class="circle">
+                <h3>40K+</h3>
+                <p>Jobs available globally <br> to skilled tech pre-grads</p>
+            </div>
+            <div class="circle">
+                <h3>300</h3>
+                <p>student optimized coding</p>
+                <p>courses offers by YCT</p>
+                <p>CodePlay</p>
+            </div>
+        </div>
+        <img src="imgs/SuperToroid-2.png" alt="">
+    </section>
 </body>
 </html>
