--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
            <img src="imgs/Man2.png" alt="">
        </div>
     </header>
-    <section>
+    <section class="circle-section">
         <h5>WHY YCT CODEPLAY?</h5>
         <h2>We believe</h2>
         <h1>in the potential <span>for</span> <br> technology <span>to reshape the</span> <br> learning experience</h1>
@@ -99,6 +99,73 @@
             </div>
         </div>
         <img src="imgs/SuperToroid-2.png" alt="">
+    </section>
+    <section class="handsUp">
+        <div class="handsUp_container">
+            <img src="imgs/YCT CODEPLAY-logo 1.png" alt="">
+            <h1>Tired of regular, Boring</h1>
+            <h1> coding methods?</h1>
+            <span class="paragraph">
+                <p>Get started with your <strong>Student Focused</strong> coding learning</p>
+                <p> and practice journey on YCT CodePlay now!</p>
+            </span>
+            <div class="btn">
+                <a href="#" class="loginbtn">Login</a>
+                <a href="#" class="Get_started">Get Coding{} <span>-></span></a>
+            </div>
+            <div class="handsUp-img">
+                <img src="imgs/image 1.png" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="designs_container">
+        <h5>HOW DOES YCT CODEPLAY WORK</h5>
+        <h2>How we work</h2>
+        <h1>we curated the best <span>young & <br> skilled</span> tech minds to create <br> over <span>50</span> Coding courses.</h1>
+
+        <div class="screen-container">
+            <div class="first-screen">
+                <div class="card-head">
+                    <h5>Mobile App Dev</h5>
+                </div>
+                <div class="card-body">
+                    <img src="imgs/iMockup - iPhone 14.pn" alt="">
+                </div>
+            </div>
+            <div class="second-screen">
+                <div class="card-head">
+                    <h5>Mobile App Dev</h5>
+                    <h1>Mobile App Dev</h1>
+                    <p>Work on learning to builf cross platform / single platform mobile apps using Java, swift, React native as seen in the example <span>Rushbox</span> below</p>
+                </div>
+                <div class="card-body">
+                    <img src="imgs/iMockup - iPhone 14.png" alt="">
+                </div>
+            </div>
+            <div class="third-screen">
+                <div class="card-head">
+                    <h5>UI/UX Design</h5>
+                    <h1>User Interface & User <br> Experience Design</h1>
+                </div>
+                <div class="btn">
+                    <a class="loginbtn">coming soon...</a>
+                </div>
+            </div>
+            <div class="forth-screen">
+                <div class="card-head">
+                    <h5>Backend Dev.</h5>
+                    <h1>Learn to build complex <br> Backend applications & <br> APIs
+                    </h1>
+                </div>
+                    <img class="image1" src="imgs/Vector (1).png" alt="">
+                    <img class="image2" src="imgs/Vector (2).png" alt="">
+                    <img class="image3" src="imgs/Vector.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="">
+
     </section>
 </body>
 </html>
