just doing the faq section

--- a/index.html
+++ b/index.html
@@ -164,8 +164,15 @@
         </div>
     </section>
 
-    <section class="">
-
+    <section class="faq-container">
+        <details class="faq-item">
+            <summary>01 How do I signup?</summary>
+            <p>Here are some commonly asked questions about our Student Focused code learning platform YCT CodePlay.</p>
+        </details>
+        <details class="faq-item">
+            <summary>02 How manyb courses are on YCT CodePlay?</summary>
+            <p>There are over 50 courses available on YCT CodePlay.</p>
+        </details>
     </section>
 </body>
 </html>
