I'm done with the design

--- a/index.html
+++ b/index.html
@@ -164,15 +164,90 @@
         </div>
     </section>
 
-    <section class="faq-container">
-        <details class="faq-item">
-            <summary>01 How do I signup?</summary>
-            <p>Here are some commonly asked questions about our Student Focused code learning platform YCT CodePlay.</p>
-        </details>
-        <details class="faq-item">
-            <summary>02 How manyb courses are on YCT CodePlay?</summary>
-            <p>There are over 50 courses available on YCT CodePlay.</p>
-        </details>
+    <section class="faq-section">
+        <div class="gradient"></div>
+        <div class="faq-container">
+            <div class="faq-head">
+                <h1>Questions asked</h1>
+                <h1>about YCT CodePlay</h1>
+            </div>
+            <div class="faq-paragraph">
+                <p>Here are some commonly asked questions about our <span>Student </span></p>
+                <p><span> Focused</span> code Learning platform YCT CodePlay</p>
+            </div>
+            <div class="content">
+                <details class="faq-item">
+                    <summary>01 How do I signup?</summary>
+                    <p>Here are some commonly asked questions about our Student Focused code learning platform YCT CodePlay.</p>
+                </details>
+                <details class="faq-item">
+                    <summary>02 How many courses are on YCT CodePlay?</summary>
+                    <p>There are over 50 courses available on YCT CodePlay.</p>
+                </details>
+                <details class="faq-item">
+                    <summary>03 Is YCT CodePlay only for YabaTech Students?</summary>
+                    <p>YCT CodePlay is open to all students interested in coding.</p>
+                </details>
+                <details class="faq-item">
+                    <summary>04 Is YCT CodePlay going to be online forever?</summary>
+                    <p>Yes, YCT CodePlay will remain online indefinitely.</p>
+                </details>
+                <details class="faq-item">
+                    <summary>05 How mucg do I have to pay to use YCT CodePlay?</summary>
+                    <p>YCT CodePlay is completely free for all students.</p>
+                </details>
+            </div>
+        </div>
     </section>
+
+    <div class="marquee-container">
+        <div class="marquee">
+            <span>✨ Affordable ✨ Student Focused ✨ Great UX ✨ 50+ Courses ✨</span>
+            <span>✨ Affordable ✨ Student Focused ✨ Great UX ✨ 50+ Courses ✨</span>
+        </div>
+    </div>
+
+    <section class="action_call">
+        <h5>FINALLY.</h5>
+        <h1>Join the Software Revolution</h1>
+        <p>Get started with your <span>Student Focused</span> coding learning</p>
+        <p>and practice journey on YCT CodePlay now!</p>
+
+        <img src="imgs/Brown-in-Jumper10.png" alt="">
+
+        <div class="btn">
+            <a href="#" class="Get_started">Get Coding{} <span>-></span></a>
+            <a href="#" class="loginbtn">Login</a>
+        </div>
+    </section>
+
+    <footer>
+        <div class="logo">
+            <img src="imgs/YCT CODEPLAY-logo 1.png" alt="logo">
+        </div>
+        <div class="members">
+            <div class="supervisor">
+                <h5>Supervisor</h5>
+                <a href="#">DR. Okikiola</a>
+            </div>
+            <div class="team-members">
+                <h5>Team</h5>
+                <a href="#">Shobayo Benjamin (Developer)</a>
+                <a href="#">Ijaodola Tope (Designer)</a>
+                <h4>Komolafe Joseph</h4>
+                <h4>Bello Tolulope</h4>
+                <h4>Oyeleke Praise</h4>
+                <h4>Olayuwa Rebecca</h4>
+                <h4>Bitrus Oluwatimileyin</h4>
+                <h4>Oji Basil</h4>
+                <h4>Bolaji Fuad</h4>
+                <h4>Samuel</h4>
+                <h4>Johnson Musa Akorede</h4>
+            </div>
+        </div>
+        <img src="imgs/Saly-11.png" alt="student">
+    </footer>
+
+    <script src="app.js"></script>
 </body>
 </html>
