I have intigrated signin, signup and forgot password and im looking to start the main interface

--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>YctCodePlay</title>
+
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="" class="active">Home</a></li>
+            <li><a href="#" class="active">Home</a></li>
             <li><a href="">Courses</a></li>
-            <li><a href="">Contact Us</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="" class="signup">Sign up +</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="signup.html" class="signup">Sign up +</a></li>
         </ul>
     </nav>
     <header>
@@ -22,8 +23,8 @@
                 <img src="imgs/YCT CODEPLAY-logo 1.png" alt="logo">
             </div>
             <div class="btns">
-                <a href="#" class="login">Login</a>
-                <a href="#" class="signup">Signup +</a>
+                <a href="signin.html" class="login">Login</a>
+                <a href="signup.html" class="signup">Signup +</a>
                 <a href="#">+</a>
             </div>
        </div>
@@ -38,8 +39,8 @@
             <p>tailored to help you grow, one line of code at a time.</p>
 
             <div class="btn">
-                <a href="#" class="loginbtn">Login</a>
-                <a href="#" class="Get_started">Get Coding{} <span>-></span></a>
+                <a href="signin.html" class="loginbtn">Login</a>
+                <a href="signup.html" class="Get_started">Get Coding{} <span>-></span></a>
             </div>
        </div>
 
@@ -110,8 +111,8 @@
                 <p> and practice journey on YCT CodePlay now!</p>
             </span>
             <div class="btn">
-                <a href="#" class="loginbtn">Login</a>
-                <a href="#" class="Get_started">Get Coding{} <span>-></span></a>
+                <a href="signin.html" class="loginbtn">Login</a>
+                <a href="signup.html" class="Get_started">Get Coding{} <span>-></span></a>
             </div>
             <div class="handsUp-img">
                 <img src="imgs/image 1.png" alt="">
@@ -216,8 +217,8 @@
         <img src="imgs/Brown-in-Jumper10.png" alt="">
 
         <div class="btn">
-            <a href="#" class="Get_started">Get Coding{} <span>-></span></a>
-            <a href="#" class="loginbtn">Login</a>
+            <a href="signup.html" class="Get_started">Get Coding{} <span>-></span></a>
+            <a href="signin.html" class="loginbtn">Login</a>
         </div>
     </section>
 
@@ -248,6 +249,6 @@
         <img src="imgs/Saly-11.png" alt="student">
     </footer>
 
-    <script src="app.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
